# rust-api

./: Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_item_table.rs  m20220101_000001_create_warehouse_table.rs  m20250111_200628_add_weight_column_to_item_table.rs  m20250123_153348_create_user_table.rs
src/: data_loader.rs  main.rs
src/api/: common.rs  item.rs  middlewares.rs  mod.rs  warehouse.rs
src/auth/: auth.rs
src/entities/: item.rs  mod.rs  prelude.rs  user.rs  warehouse.rs
src/enums/: enums.rs
src/errors/: errors.rs
src/models/: address.rs  entities.rs  mod.rs  times.rs
src/repositories/: item.rs  mod.rs  repositories.rs  user.rs  warehouse.rs
