[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
sea-orm = {version = "1.1.4", features = ["sqlx-mysql", "runtime-async-std-native-tls"]}
futures = "0.3.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
fake = "3.1.0"
axum= { version = "0.8.1", features = ["macros"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.135"
tower-http = { version = "0.4", features = ["cors"] }
