[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
sea-orm = {version = "1.1.4", features = ["sqlx-mysql", "runtime-async-std-native-tls"]}
futures = "0.3.31"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
fake = "3.1.0"
axum= { version = "0.8.1", features = ["macros"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.135"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = { version = "0.5.2" , features = ["limit", "util", "buffer"] }
log = "0.4.25"
env_logger = "0.11.6"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
rand = "0.8.5"
http = "1.2.0"